<?xml version="1.0"?>
<package>
    <name>data_exporter</name>
    <version>1.0.0</version>
    <description>The data_exporter package</description>

    <maintainer email="abrahammonrroy@yahoo.com">amc</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>libpcl-all</build_depend>
    <build_depend>boost</build_depend>

    <run_depend>pcl_conversions</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>libpcl-all</run_depend>
    <run_depend>boost</run_depend>

</package>
